navigation collapsing fix

--- a/public/styles/material-dashboard/_responsive.scss
+++ b/public/styles/material-dashboard/_responsive.scss
@@ -92,7 +92,7 @@
 
 /*          Changes for small display      */
 
-@media (max-width: 991px){
+@media (max-width: 767px){
     .sidebar{
         display: none;
         box-shadow: none;
